--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-netlify-identity-widget": "^0.2.7"
   },
   "scripts": {
+    "build": "gatsby build",
     "dev": "gatsby develop"
   }
 }
